// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optic ruleset upload can publish a ruleset 1`] = `
"Successfully uploaded the ruleset @orgslug/ruleset-name
You can start using this ruleset by adding the ruleset @orgslug/ruleset-name in your optic.dev.yml or standards file.
"
`;

exports[`optic ruleset upload exits if ruleset file does not have rulesConstructor 1`] = `
"Rules file does not export a rulesetConstructor that is a function
[31mRules file does not match expected format. Expected ruleset file to have a default export with the shape[39m
[31m{[39m
[31m  name: string;[39m
[31m  description: string;[39m
[31m  configSchema?: any;[39m
[31m  rulesetConstructor: (config: ConfigSchema) => Ruleset;[39m
[31m}[39m
"
`;

exports[`optic ruleset upload exits if ruleset file shape is not valid 1`] = `
"Rule file is invalid:
data/default must have required property 'description'
[31mRules file does not match expected format. Expected ruleset file to have a default export with the shape[39m
[31m{[39m
[31m  name: string;[39m
[31m  description: string;[39m
[31m  configSchema?: any;[39m
[31m  rulesetConstructor: (config: ConfigSchema) => Ruleset;[39m
[31m}[39m
"
`;
